--- a/platformio.ini
+++ b/platformio.ini
@@ -12,13 +12,10 @@
 src_dir = .
 
 [env:default]
-platform = espressif8266
-board = d1_mini
-board_build.f_cpu = 160000000L
-build_flags = -DVTABLES_IN_IRAM
+platform = espressif32
+board = wemos_d1_mini32
 framework = arduino
 monitor_speed = 115200
-upload_speed = 1000000
+upload_speed = 921600
 lib_deps = 551 ;NTPClient
-    WifiManager
     
